[gd_scene load_steps=30 format=3]

[ext_resource type="PackedScene" uid="uid://cgaeu2ag4857g" path="res://Scene/Base/BaseMonster.tscn" id="1"]
[ext_resource type="Script" path="res://Script/Monster/Monster_22.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bx65bc212w8px" path="res://Art/Monster/Cow/Second/WalkHitHurtDeathWait.png" id="3"]
[ext_resource type="Texture2D" uid="uid://b6nfjrcmbkky7" path="res://Art/Monster/Monster4/Boss_Death.png" id="4"]

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource( "3" )
region = Rect2(0, 0, 147, 123)
script = null

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource( "4" )
region = Rect2(768, 0, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource( "4" )
region = Rect2(0, 192, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource( "4" )
region = Rect2(192, 192, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource( "4" )
region = Rect2(384, 192, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource( "4" )
region = Rect2(576, 192, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource( "4" )
region = Rect2(768, 192, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource( "3" )
region = Rect2(0, 0, 147, 123)
script = null

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource( "3" )
region = Rect2(147, 0, 147, 123)
script = null

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource( "3" )
region = Rect2(0, 0, 147, 123)
script = null

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource( "3" )
region = Rect2(147, 0, 147, 123)
script = null

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource( "3" )
region = Rect2(0, 0, 147, 123)
script = null

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource( "3" )
region = Rect2(147, 0, 147, 123)
script = null

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource( "3" )
region = Rect2(0, 0, 147, 123)
script = null

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource( "3" )
region = Rect2(147, 0, 147, 123)
script = null

[sub_resource type="SpriteFrames" id="16"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource( "1" )
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource( "1" )
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource( "1" )
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource( "1" )
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource( "1" )
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource( "1" )
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource( "1" )
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "3" )
}, {
"duration": 1.0,
"texture": SubResource( "4" )
}, {
"duration": 1.0,
"texture": SubResource( "5" )
}, {
"duration": 1.0,
"texture": SubResource( "6" )
}, {
"duration": 1.0,
"texture": SubResource( "7" )
}, {
"duration": 1.0,
"texture": SubResource( "7" )
}, {
"duration": 1.0,
"texture": SubResource( "7" )
}, {
"duration": 1.0,
"texture": SubResource( "7" )
}, {
"duration": 1.0,
"texture": SubResource( "7" )
}],
"loop": false,
"name": &"death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "8" )
}, {
"duration": 1.0,
"texture": SubResource( "9" )
}],
"loop": false,
"name": &"hit1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "10" )
}, {
"duration": 1.0,
"texture": SubResource( "11" )
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "12" )
}, {
"duration": 1.0,
"texture": SubResource( "13" )
}],
"loop": false,
"name": &"wait",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "14" )
}, {
"duration": 1.0,
"texture": SubResource( "15" )
}],
"loop": false,
"name": &"walk",
"speed": 10.0
}]
script = null

[sub_resource type="Animation" id="17"]
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterDir/mr_ani:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667, 0.733333, 0.8, 0.866667, 0.933333, 1, 1.06667, 1.13333, 1.2, 1.26667, 1.33333, 1.4, 1.46667, 1.53333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterDir/mr_ani:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BaseDamageBox/HitBox/HitBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BaseDamageBox/HurtBox/HurtBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.7, 0.7001, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"fall_items"
}, {
"args": [],
"method": &"fall_stone_"
}, {
"args": [],
"method": &"free"
}]
}
script = null

[sub_resource type="RectangleShape2D" id="18"]
size = Vector2(124, 97)
script = null

[sub_resource type="Animation" id="19"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterDir/mr_ani:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterDir/mr_ani:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["hit1"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BaseDamageBox/HitBox/HitBox:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "18" )]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BaseDamageBox/HitBox/HitBox:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 2.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BaseDamageBox/HitBox/HitBox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"call_fire"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BaseDamageBox/HurtBox/HurtBox:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
script = null

[sub_resource type="Animation" id="20"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterDir/mr_ani:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterDir/mr_ani:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["hurt"]
}
script = null

[sub_resource type="Animation" id="21"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterDir/mr_ani:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterDir/mr_ani:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["wait"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BaseDamageBox/HurtBox/HurtBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
script = null

[sub_resource type="Animation" id="22"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterDir/mr_ani:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterDir/mr_ani:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["walk"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BaseDamageBox/HitBox/HitBox:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "18" )]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BaseDamageBox/HitBox/HitBox:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 2.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BaseDamageBox/HitBox/HitBox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BaseDamageBox/HurtBox/HurtBox:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
script = null

[sub_resource type="AnimationLibrary" id="23"]
_data = {
"death": SubResource( "17" ),
"hit1": SubResource( "19" ),
"hurt": SubResource( "20" ),
"wait": SubResource( "21" ),
"walk": SubResource( "22" )
}
script = null

[sub_resource type="RectangleShape2D" id="24"]
size = Vector2(122, 99)
script = null

[sub_resource type="CapsuleShape2D" id="25"]
radius = 21.0
height = 68.0
script = null

[node name="Monster_22" instance=ExtResource( "1" )]
script = ExtResource( "2" )

[node name="mr_ani" parent="MonsterDir" index="0"]
sprite_frames = SubResource( "16" )
animation = &"death"
frame = 10

[node name="mr_player" parent="." index="2"]
libraries = {
"": SubResource( "23" )
}

[node name="HitBox" parent="BaseDamageBox" index="0"]
collision_mask = 128

[node name="HitBox" parent="BaseDamageBox/HitBox" index="0"]
position = Vector2(0, 2.5)
shape = SubResource( "18" )
disabled = true

[node name="HurtBox" parent="BaseDamageBox" index="1"]
collision_layer = 3136

[node name="HurtBox" parent="BaseDamageBox/HurtBox" index="0"]
position = Vector2(1, 1.5)
shape = SubResource( "24" )
disabled = true
metadata/_edit_lock_ = true

[node name="pz" parent="." index="4"]
shape = SubResource( "25" )
metadata/_edit_lock_ = true

[node name="change_dir" type="Timer" parent="." index="11"]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="change_dir" to="." method="_on_change_dir_timeout" flags=18]
